fix(code block): Horizontal overflow fix (https://github.com/jackyzha0/quartz/issues/1438, https://github.com/jackyzha0/quartz/issues/1353)

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -250,6 +250,7 @@ a {
 
     & .center,
     & footer {
+      max-width: 100%;
       min-width: 100%;
       margin-left: auto;
       margin-right: auto;
